[package]
name = "parsley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-spec = "0.6.2"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
derive_builder = "0.12.0"
tar = "0.4.40"
thiserror = "1.0.48"
getset = "0.1.2"
test-case = "3.2.1"
